--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  /* background: url("../img/img5.jpg") top center; */
+  background-color: rgb(5, 79, 139);
   background-size: cover;
 }
 
